# fake_hub

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  skeleton.py
tests/: test_api_compat.py  test_dataset_api_compat.py  test_range_support.py  test_skeleton_cli.py
