[project]
name = "fake-hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]

[project.scripts]
fakehub-skeleton = "skeleton:main"

 
